--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hunger Hasty | HungerHasty.com</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" media="screen and (max-width: 1170px)" href="index2.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap">
 </head>
 
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="fow1.png" alt="HungerHasty.com">
+            <img src="images/fow1.png" alt="HungerHasty.com">
         </div>
 
         <ul>
@@ -35,13 +35,13 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="img/pngwing.com1.png" alt="">
+                <img src="images/pngwing.com1.png" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, est, blanditiis, nisi
                     aperiam quae explicabo cupiditate quos placeat magnam qui necessitatibus ipsum et rerum?</p>
             </div>
             <div class="box">
-                <img src="img/pngwing.com2.png" alt="">
+                <img src="images/pngwing.com2.png" alt="">
                 <h2 class="h-secondary center">
                     Bulk Ordering
                 </h2>
@@ -49,7 +49,7 @@
                     aperiam quae explicabo cupiditate quos placeat magnam qui necessitatibus ipsum et rerum?</p>
             </div>
             <div class="box">
-                <img src="img/sfow1.png" alt="">
+                <img src="images/sfow1.png" alt="">
                 <h2 class="h-secondary center">
                     Food Ordering
                 </h2>
@@ -63,16 +63,16 @@
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="img/pngwing.com (1).png" alt="Our client">
+                <img src="images/pngwing.com (1).png" alt="Our client">
             </div>
             <div class="client-item">
-                <img src="img/pngwing.com (2).png" alt="Our client">
+                <img src="images/pngwing.com (2).png" alt="Our client">
             </div>
             <div class="client-item">
-                <img src="img/pngwing.com (3).png" alt="Our client">
+                <img src="images/pngwing.com (3).png" alt="Our client">
             </div>
             <div class="client-item">
-                <img src="img/pngwing.com.png" alt="Our client">
+                <img src="images/pngwing.com.png" alt="Our client">
             </div>
         </div>
     </section>
